Added a brand new design. Now the map is even bigger! And we have a search box, so you can see the place you're looking for make a donation. :D

--- a/client/sass/_general.scss
+++ b/client/sass/_general.scss
@@ -4,20 +4,57 @@ html, body {
 }
 
 .container {
-  margin: 20px auto 50px;
-  h1 {
-    @include size(295px, 100px);
-    background: url('../images/acasedona.png') no-repeat center center;
-    background-size: cover;
-    text-indent: -9999px;
-    margin: 0 auto;
+  .alert_success {
+    padding: 10px;
+    background: $yellow;
+    color: $greenBlue;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
-  p {
-    &.text {
-      color: $yellow;
-      font-size: 20px;
-      padding-top: 20px;
+}
+
+@media screen and (max-width: 767px) {
+  .table-responsive {
+    border: 0px !important;
+  }
+  header {
+    .container {
+      padding-left: 0px;
+      padding-right: 0px;
     }
+  }
+  .floating-about,
+  .floating-form {
+    &.active {
+      padding-top: 60px;
+    }
+    .content {
+      max-width: 700px;
+      width: auto;
+    }
+  }
+}
+
+.table {
+  margin-bottom: 5px;
+}
+.table>tbody>tr>td {
+  padding: 0;
+  line-height: 1;
+  border-top: 0px;
+}
+
+.floating-about,
+.floating-form {
+  position: absolute;
+  top: -2500px;
+  width: 100%;
+  z-index: 999;
+  background: $greenBlue;
+  padding: 20px;
+  transition: all .5s ease;
+  &.active {
+    top: 110px;
   }
   span {
     &.text {
@@ -28,31 +65,27 @@ html, body {
       display: block;
     }
   }
-  .alert_success {
-    padding: 10px;
-    background: $yellow;
-    color: $greenBlue;
-    margin-top: 20px;
-    margin-bottom: 20px;
+  .content {
+    width: 700px;
+    margin: 0 auto;
   }
 }
 
-.twitter-share-button {
-  margin-bottom: -10px;
-  margin-right: 20px;
-}
-.fb-share-button {
-  margin-bottom: 10px;
+@media screen and (max-width: 767px) {
+  footer {
+    max-height: 160px !important;
+    line-height: 40px !important;
+    padding: 10px 0;
+  }
 }
 
 footer {
-  line-height: 30px;
+  line-height: 50px;
   text-align: center;
+  max-height: 50px;
   background: $marineBlue;
   color: $yellow;
   font-weight: $latoBold;
-  padding-top: 50px;
-  padding-bottom: 50px;
   span {
     font-size: 1.7em;
   }
@@ -66,20 +99,21 @@ footer {
       text-decoration: none;
     }
   }
-  .about {
-    max-width: 600px;
-    font-size: 12px;
-    margin: 30px auto 0;
-    padding: 20px;
-    border-radius: 5px;
-    background: $lightBlue;
-    line-height: 16px;
-    text-align: justify;
-    color: $marineBlue;
-    b {
-      display: block;
-      font-weight: $latoBold;
-      text-align: center;
-    }
+}
+
+.about {
+  max-width: 600px;
+  font-size: 12px;
+  margin: 30px auto 0;
+  padding: 20px;
+  border-radius: 5px;
+  background: $lightBlue;
+  line-height: 16px;
+  text-align: justify;
+  color: $marineBlue;
+  b {
+    display: block;
+    font-weight: $latoBold;
+    text-align: center;
   }
 }
