--- a/templates/flowics.mustache
+++ b/templates/flowics.mustache
@@ -1,8 +1,8 @@
-<!--<div class="flowics-viz" data-fluid="yes" data-experience="fd99689442e83151f6a503704ae113af"-->
-<!--     data-visualization="317"></div>-->
-<!--<script src="https://engage.flowics.com/public-assets/embedscript"></script>-->
+<div class="flowics-viz" data-fluid="yes" data-experience="fd99689442e83151f6a503704ae113af"
+     data-visualization="317"></div>
+<script src="https://engage.flowics.com/public-assets/embedscript"></script>
 
-<div class="text-center" style="padding: 0 0 40px;">
-<a href="https://engage.flowics.com/visualizations/fd99689442e83151f6a503704ae113af/frames/317/live" target="_blank"
-   class="btn btn-success">Ver seguimiento en Twitter con Flowics</a>
-</div>
+<!--<div class="text-center" style="padding: 0 0 40px;">-->
+<!--<a href="https://engage.flowics.com/visualizations/fd99689442e83151f6a503704ae113af/frames/317/live" target="_blank"-->
+<!--   class="btn btn-success">Ver seguimiento en Twitter con Flowics</a>-->
+<!--</div>-->
