--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -55,36 +55,17 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
 
+    {{{ header }}}
+
     {{{ yield }}}
 
-    {{{ flowics }}}
-
     <footer>
-        <a href="https://twitter.com/hashtag/AcaSeDona?src=hash" target="_blank">#AcaSeDona</a>
-        <a href="https://twitter.com/AcaSeDona" target="_blank"><span><i class="fa fa-twitter"></i></span> @AcaSeDona</a>
-
-        <br>
-        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.AcaSeDona.com.ar/" data-text="¡Armemos un mapa que muestre todos los lugares que reciben ayuda para los inundados! Colaborá en" data-lang="es" data-related="AcaSeDona" data-hashtags="AcaSeDona">Twittear</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
-        <div class="fb-share-button" data-href="http://www.acasedona.com.ar/" data-layout="button_count"></div>
-        <br>
-
+        <a href="https://twitter.com/AcaSeDona" target="_blank">@AcaSeDona</a>
         <a href="https://twitter.com/celestineia" target="_blank">@celestineia</a>
         <a href="https://twitter.com/martujohansen" target="_blank">@martujohansen</a>
         <a href="https://twitter.com/alemohamad" target="_blank">@alemohamad</a>
         <a href="https://twitter.com/rusosnith" target="_blank">@rusosnith</a>
-
-        <br>
-
-        <div class="about">
-            <b>#AcaSeDona: el sitio para ayudar a los inundados</b><br>
-            AcaSeDona.com.ar es un proyecto que surgió con el fin de unificar la información sobre centros que reciben donaciones para los inundados.<br>
-            Se trata de un mapa colaborativo en el que cualquier persona puede agregar puntos de donación de todo el país como colegios, iglesias, universidades y clubes de barrio.<br>
-            La georeferencia permite que los usuarios puedan detectar fácilmente cuáles son los lugares cercanos para poder acercarse a donar en su barrio.<br>
-            Para agregar un punto sólo hace falta ingresar a AcaSeDona.com.ar y llenar un breve formulario que incluye datos como dirección y horarios en los que se reciben las donaciones.<br>
-            Primero se charló entre @Martujohansen y @celestineia. Una vez que acordaron cómo sería el sitio, rápidamente sumaron a un diseñador (@rusosnith) y a un desarrollador (@alemohamad), y en 22 hs (exactas) tenían funcionando el sitio sin haberse reunido ni una sola vez.
-        </div>
+        <button class="btn btn-sm btn-primary show-info">¿Qué es #AcaSeDona?</button>
     </footer>
 
     {{{ analytics }}}
