Changed FB share image. Added cached url to social network images.

--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -13,7 +13,7 @@
     <meta property="og:url" content="http://www.acasedona.com.ar/">
     <meta property="fb:app_id" content="1574437776138087">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://www.acasedona.com.ar/assets/images/acasedona-fb.png">
+    <meta property="og:image" content="{{ asset_share_fb }}">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -22,12 +22,12 @@
     <meta name="twitter:url" content="http://www.acasedona.com.ar/">
     <meta name="twitter:title" content="#AcaSeDona">
     <meta name="twitter:description" content="Acá Se Dona es un mapa colaborativo que junta todos los puntos en donde se reciben donaciones en el mismo lugar. ¡Ayudemos a ayudar!">
-    <meta name="twitter:image" content="http://www.acasedona.com.ar/assets/images/acasedona-tw.png">
+    <meta name="twitter:image" content="{{ asset_share_tw }}">
 
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="#AcaSeDona">
     <meta itemprop="description" content="Acá Se Dona es un mapa colaborativo que junta todos los puntos en donde se reciben donaciones en el mismo lugar. ¡Ayudemos a ayudar!">
-    <meta itemprop="image" content="http://www.acasedona.com.ar/assets/images/acasedona-fb.png">
+    <meta itemprop="image" content="{{ asset_share_gp }}">
 
     <link href="{{ asset_favicon }}" rel="shortcut icon">
 
