--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -37,8 +37,7 @@
     <script>
         var url_website = '{{ url_website }}';
     </script>
-
-    <script src="http://maps.google.com/maps/api/js?key={{ gm_api_key }}"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key={{ gm_api_key }}" type="text/javascript"></script>
     <script src='https://www.google.com/recaptcha/api.js?hl=es'></script>
     <script src="{{ asset_js_vendors }}"></script>
     <script src="{{ asset_js }}"></script>
